--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -15,6 +15,7 @@ $body-font: 15px;
 html {
     font-size: 62.5%;
     font-family: 'Overpass', sans-serif;
+    background: $very-dark-blue;
 }
 
 body {
