--- a/styles/_rating-component.scss
+++ b/styles/_rating-component.scss
@@ -1,10 +1,10 @@
 .container {
+  width: 360px;
   background: radial-gradient(at top, $dark-blue, #151b21);
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 25%;
   border-radius: 2rem;
 }
 
@@ -23,32 +23,47 @@ form {
   }
 }
 
+.rating-btn,
 #star {
-  margin: 3rem 0;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+}
+
+#star {
+  margin: 2rem 0;
   background: $dark-blue;
-  width: 4.5rem;
-  height: 4.5rem;
-  padding: 1.39rem 0;
-  border-radius: 50%; 
   text-align: center;
+  position: relative;
+
+  img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
 
 .ratings {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .rating-btn {
-  color: $medium-grey;
+  cursor: pointer;
+  color: $light-grey;
   background: $dark-blue;
   border: none;
-  width: 4.5rem;
-  height: 4.5rem;
-  border-radius: 50%;
   font-weight: bold;
+  transition: all 0.1s ease-in;
+  &:hover {
+    background: $orange;
+    color: $white;
+  }
 }
 
 #submit {
+  cursor: pointer;
   margin: 3rem 0;
   background: $orange;
   color: $white;
@@ -58,4 +73,41 @@ form {
   border-radius: 4rem;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
+  transition: all 0.2s ease-in;
+  &:hover {
+    background: $white;
+    color: $orange;
+  }
+}
+
+.active {
+  background: $medium-grey;
+  color: $white;
+}
+
+.remove {
+  display: none;
+}
+
+.center {
+  text-align: center;
+}
+
+.rating {
+  background: $dark-blue;
+  color: $orange;
+  padding: 0.5rem 2rem;
+  width: 60%;
+  border-radius: 4rem;
+  margin: 2rem auto 3rem auto;
+  text-align: center;
+}
+
+.rating-width {
+  width: 87%;
+  margin: 1rem auto 4rem auto;
+}
+
+.submit-image {
+  margin: 3rem 0;
 }
